    which calculates sectors timing based on all time best sectors
    and affects "Sectors Widget" display.
    This option is enabled by default.
    Set "false" to calculate sectors timing from current session only.
    Note, both session best and all time best sectors data
    are saved no matter the setting.
  - Add reset "Sector best" option to "Reset data" menu.

* Pedal Widget
  - Add "show_readings" option, which shows pedal input
    and force feedback readings.
    Note, while "show_*_filtered" option is enabled, only the highest
    reading between filtered & raw input is displayed.
    Text position can be adjusted by "readings_offset" option,
    default value is 0.5, which sets position in the middle.

2.14.1 (2024-06-24)
-----------------------------
* Radar Widget
  - Add 3 new "auto_hide_minimum_distance" options (ahead, behind, side),
    which define an invisible rectangle area(unit meter) that auto hides radar
    if no vehicle is within the rectangle area.
    Default value is "-1", which auto scales with "radar_radius" value.
    Set to any positive value to customize radar auto-hide range.
  - Add 3 new "vehicle_maximum_visible_distance" options (ahead, behind, side),
    which define an invisible rectangle area(unit meter) that
    hides any vehicle outside the rectangle area.
    Default value is "-1", which auto scales with "radar_radius" value.
    Set to any positive value to customize vehicle visible range.
  - Add 3 additional distance circle marks (total of 5 marks)
    that can be used to determine nearby vehicle relative distance.
    Each circle's default radius value is "10" meter apart.
    Note, circle marks are only displayed if "distance_circle_*_radius" values
    are within "radar_radius" value.

* Relative, Rivals, Standings Widget
  - Now draws logo only once per unique brand and stores image in cache.

* Misc
  - Updated User Guide info for Radar Widget.

2.14.0 (2024-06-14)
-----------------------------
* General